# quadmesh-commons

./: .gitignore  CMakeLists.txt  README.md
cmake/: CommonsConfig.cmake.in
include/cmms/: cartesian.hpp  cycler.hpp  cyclic_iterator.hpp  debug.hpp  itertools.hpp  logging.hpp  range_print.hpp  to_string.hpp
src/: logging.cpp
